--- a/README
+++ b/README
@@ -1,4 +1,14 @@
 GitHub repo available here:
 https://github.com/Andy-Thornton/drupal-vim
 
-More information to come.
+Plugins Installed
+=================
+
+Drupal Plugin
+http://drupal.org/node/1389006
+
+NERDtree
+http://www.vim.org/scripts/script.php?script_id=1658
+
+Taglist
+http://www.vim.org/scripts/script.php?script_id=273
