added slideshow links to readme

--- a/README
+++ b/README
@@ -12,3 +12,6 @@ http://www.vim.org/scripts/script.php?script_id=1658
 
 Taglist
 http://www.vim.org/scripts/script.php?script_id=273
+
+Slideshow Demo
+http://bit.ly/drupal-development-with-vim
